[package]
name = "scylla-parse-macros"
version = "0.1.0"
authors = ["Louay Kamel"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/louaykamel/scylladb"
description = "Procedural macros for the scylla-rs driver"
keywords = ["actor", "scylla", "cassandra", "database", "proc-macro"]
exclude = [".github/**/*"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
syn = { version = "1.0", features = ["full"]}
