[package]
name = "scylladb-macros"
version = "0.1.0"
authors = ["Louay kamel"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/louaykamel/scylladb"
description = "Procedural macros for the scylladb driver"
keywords = ["actor", "scylla", "cassandra", "database", "driver"]
exclude = [".github/**/*"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
scylladb-parse = "0.1"

[dev-dependencies]
syn = { version = "1.0", features = ["full"]}
