[package]
name = "scylladb-parse"
version = "0.1.1"
authors = ["Louay Kamel"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/louaykamel/scylladb"
description = "Statement parsing library for Scylla CQL"
keywords = ["actor", "scylla", "cassandra", "database", "parser"]
exclude = [".github/**/*"]

[dependencies]
uuid = "0.8"
regex = "1.5"
hex = "0.4"
derive_builder = "0.10"
lazy_static = "1.4"
chrono = { version = "0.4", default-features = false }
anyhow = "1.0"
derive_more = "0.99"
anymap = "0.12"
quote = "1.0"
scylladb-parse-macros = "0.1"

[dev-dependencies]
maplit = "1.0"
